# pcbre

./: pyproject.toml
pysrc/pcbre/accel/: find_so.py
